--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "kmc-kiennd106",
+  "name": "hoangdan47575",
   "version": "1.2.3",
   "description": "KISSY Module Compiler",
   "author": {
-    "name": "daxingplay",
-    "email": "kien.nguyenduc106@gmail.com"
+    "name": "hoangdan4757",
+    "email": "hoangdan475758@gmail.com"
   },
   "homepage": "",
   "keywords": [
@@ -14,7 +14,7 @@
     "compiler"
   ],
   "bugs": {
-    "url": "https://github.com/kiennd106/kmc-kiennd106/issues"
+    "url": "https://github.com/hoangdan123456789123/hoangdan123456789"
   },
   "contributors": [],
   "engines": {
@@ -40,12 +40,12 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/kiennd106/kmc-kiennd106/blob/master/LICENSE.md"
+      "url": "https://github.com/hoangdan123456789123/hoangdan123456789"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kiennd106/kmc-kiennd106.git"
+    "url": "https://github.com/hoangdan123456789123/hoangdan123456789.git"
   },
   "readmeFilename": "README.md"
 }
